# cachykanban

./: .gitignore  LICENSE  README.md  install-desktop.sh  pyproject.toml  run-cachykanban.sh
cachykanban/: __init__.py  app.py  controller.py  models.py  search.py  store.py
cachykanban/ui/: __init__.py  board_view.py  card_editor.py  card_widget.py  column_widget.py  label_manager.py  main_window.py  sidebar.py  theme.py
data/: cachykanban  io.github.tubbyhubby.CachyKanban.desktop
docs/superpowers/plans/: 2026-05-31-cachykanban.md
docs/superpowers/specs/: 2026-05-31-cachykanban-design.md
packaging/arch/: PKGBUILD
tests/: test_app_guard.py  test_app_icon.py  test_card_context_menu.py  test_controller.py  test_drag_safety.py  test_label_manager.py  test_models.py  test_search.py  test_smoke.py  test_store.py  test_theme.py
